# gmail_scanner_qt

./: .gitignore  README.md  gmail-ai-qt.spec  gmail_ai_qt.py  legacy_scanner_demo.py  pyproject.toml
installer/: gmail_ai_qt.iss
src/gmail_ai_qt_app/: __init__.py  app.py  i18n.py
src/gmail_ai_qt_app/models/: __init__.py  state.py
src/gmail_ai_qt_app/services/: __init__.py  name_generator.py  playwright_installer.py  providers.py  scanner.py  seed_utils.py  settings_store.py
src/gmail_ai_qt_app/ui/: __init__.py  actions_presenter.py  chart_presenter.py  layout_builder.py  log_buffer.py  main_window.py  runtime_presenter.py  settings_presenter.py  state_presenter.py  styles.py  translation_presenter.py
tests/: test_actions_presenter.py  test_app.py  test_main_window_install.py  test_main_window_records.py  test_playwright_installer.py  test_providers.py  test_runtime_presenter.py  test_scanner.py  test_seed_utils.py
