[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-ai-qt"
version = "0.1.0"
description = "Cross-platform PySide6 dashboard for Gmail-style name scanning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11,<7",
    "pyqtgraph>=0.14,<0.15",
    "playwright>=1,<2",
    "requests>=2.33,<3",
]

[project.scripts]
gmail-ai-qt = "gmail_ai_qt_app.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
